# src/api/swagger.yaml
@@ -421,8 +421,13 @@ paths:
               kubeconfig,
               kubeconfig-noingress,
               install-config.yaml,
+              logs,
             ]
           required: true
+        - in: query
+          name: host_id
+          type: string
+          format: uuid
       responses:
         200:
           description: Success.
@@ -537,6 +542,51 @@ paths:
             $ref: '#/definitions/error'
         409:
           description: Error.
+          schema:
+            $ref: '#/definitions/error'
+        500:
+          description: Error.
+          schema:
+            $ref: '#/definitions/error'
+
+  /clusters/{cluster_id}/install-config:
+    patch:
+      tags:
+        - installer
+      summary: Override values in the install config
+      operationId: UpdateClusterInstallConfig
+      parameters:
+        - in: path
+          name: cluster_id
+          type: string
+          format: uuid
+          required: true
+        - in: body
+          name: install-config-params
+          required: true
+          schema:
+            type: string
+      responses:
+        201:
+          description: Success.
+        400:
+          description: Error.
+          schema:
+            $ref: '#/definitions/error'
+        401:
+          description: Unauthorized.
+          schema:
+            $ref: '#/definitions/error'
+        403:
+          description: Forbidden.
+          schema:
+            $ref: '#/definitions/error'
+        404:
+          description: Error.
+          schema:
+            $ref: '#/definitions/error'
+        405:
+          description: Method Not Allowed.
           schema:
             $ref: '#/definitions/error'
         500:
@@ -1013,54 +1063,6 @@ paths:
           schema:
             $ref: '#/definitions/error'
 
-  /clusters/{cluster_id}/hosts/{host_id}/actions/debug:
-    post:
-      tags:
-        - installer
-      summary:
-        Sets a single shot debug step that will be sent next time the host agent will ask for a
-        command.
-      operationId: SetDebugStep
-      parameters:
-        - in: path
-          name: cluster_id
-          type: string
-          format: uuid
-          required: true
-        - in: path
-          name: host_id
-          type: string
-          format: uuid
-          required: true
-        - in: body
-          name: step
-          required: true
-          schema:
-            $ref: '#/definitions/debug-step'
-      responses:
-        204:
-          description: Success.
-        401:
-          description: Unauthorized.
-          schema:
-            $ref: '#/definitions/infra_error'
-        403:
-          description: Forbidden.
-          schema:
-            $ref: '#/definitions/infra_error'
-        404:
-          description: Error.
-          schema:
-            $ref: '#/definitions/error'
-        405:
-          description: Method Not Allowed.
-          schema:
-            $ref: '#/definitions/error'
-        500:
-          description: Error.
-          schema:
-            $ref: '#/definitions/error'
-
   /clusters/{cluster_id}/hosts/{host_id}/actions/enable:
     post:
       tags:
@@ -1320,6 +1322,52 @@ paths:
           required: true
         - in: path
           name: host_id
+          type: string
+          format: uuid
+          required: true
+      responses:
+        200:
+          description: Success.
+          schema:
+            type: file
+        401:
+          description: Unauthorized.
+          schema:
+            $ref: '#/definitions/infra_error'
+        403:
+          description: Forbidden.
+          schema:
+            $ref: '#/definitions/infra_error'
+        404:
+          description: Error.
+          schema:
+            $ref: '#/definitions/error'
+        405:
+          description: Method Not Allowed.
+          schema:
+            $ref: '#/definitions/error'
+        409:
+          description: Error.
+          schema:
+            $ref: '#/definitions/error'
+        500:
+          description: Error.
+          schema:
+            $ref: '#/definitions/error'
+
+  /clusters/{cluster_id}/logs:
+    get:
+      tags:
+        - installer
+      summary: Download cluster logs
+      security:
+        - userAuth: []
+      operationId: DownloadClusterLogs
+      produces:
+        - 'application/octet-stream'
+      parameters:
+        - in: path
+          name: cluster_id
           type: string
           format: uuid
           required: true
@@ -2185,6 +2233,12 @@ definitions:
           Json formatted string containing the validations results for each validation id grouped by
           category (network, hosts-data, etc.)
         x-go-custom-tag: gorm:"type:varchar(2048)"
+      install_config_overrides:
+        type: string
+        description:
+          Json formatted string containing the user overrides for the install-config.yaml file
+        example: '{"networking":{"networkType": "OVN-Kubernetes"},"fips":true}'
+        x-go-custom-tag: gorm:"type:varchar(2048)"
 
   image_info:
     type: object
@@ -2231,14 +2285,6 @@ definitions:
         items:
           type: string
           format: uuid
-
-  debug-step:
-    type: object
-    required:
-      - command
-    properties:
-      command:
-        type: string
 
   l2-connectivity:
     type: object
